# ChangeLog for dev-libs/cyrus-sasl
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.58 2004/02/27 17:53:48 kumba Exp $

  27 Feb 2004; Joshua Kinard <kumba@gentoo.org> cyrus-sasl-2.1.17.ebuild:
  Added ~mips to KEYWORDS to satisfy repoman deps.

  25 Feb 2004; Guy Martin <gmsoft@gentoo.org> cyrus-sasl-2.1.17.ebuild:
  Marked stable on hppa.

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> cyrus-sasl-2.1.17.ebuild:
  stable on alpha and ia64

  28 Jan 2004; Max Kalika <max@gentoo.org> cyrus-sasl-2.1.17.ebuild:
  Fix default port name for the rimap authentication mechanism (Gentoo uses
  'imap2' instead of 'imap'). Fixes bug 34272.

  28 Jan 2004; Max Kalika <max@gentoo.org> files/saslauthd2.conf:
  More flexible start-up script config file. Fixes bug 39447 as well.

  28 Jan 2004; Max Kalika <max@gentoo.org> cyrus-sasl-1.5.27-r6.ebuild,
  cyrus-sasl-2.1.13.ebuild, cyrus-sasl-2.1.14.ebuild,
  cyrus-sasl-2.1.15.ebuild, cyrus-sasl-2.1.17.ebuild,
  files/cyrus-sasl-1.5.21-des.patch, files/cyrus-sasl-1.5.24-rpath.patch,
  files/cyrus-sasl-1.5.27-scram.patch, files/cyrus-sasl-2.1.12-db4.patch,
  files/cyrus-sasl-2.1.12-kerberos.patch, files/saslauthd2.conf:
  Drop 2.1.13. Re-add missing patches. Fix rimap hostname flag for newer sasl
  versions.

  18 Jan 2004; <tuxus@gentoo.org> cyrus-sasl-2.1.14.ebuild:
  Added ~mips to KEYWORDS.

  15 Jan 2004; Max Kalika <max@gentoo.org> cyrus-sasl-2.1.17.ebuild,
  files/saslauthd.pam:
  Add PAM file from bug #27690 contributed by Ryan Dalzell. Fix installation of
  .rc6 and .conf files

  15 Jan 2004; Max Kalika <max@gentoo.org> cyrus-sasl-2.1.17.ebuild,
  files/cyrus-sasl-2.1.17-pgsql-include.patch:
  Fix compile with newer PostgreSQL versions. Use proper WANT_AUTOCONF syntax.
  Fixes bug #37227.

*cyrus-sasl-2.1.17 (14 Jan 2004)
