@@ -1,9 +1,9 @@
-MD5 e0cfb588eb617bc0beae7d475c00311a ChangeLog 11764
+MD5 2904c6ed8ca40438bfb23e6b2d55f4e6 ChangeLog 11887
 MD5 adc5fe7dc04f8b77f22bd78960423693 cyrus-sasl-1.5.27-r5.ebuild 2694
 MD5 15a2da2ec8147eb55baf0f19d268ec52 cyrus-sasl-1.5.27-r6.ebuild 2767
 MD5 17cd291abdb8bec3feeee17adcbcb6ea cyrus-sasl-2.1.14.ebuild 3913
 MD5 932faa05d57000adae98609ab35e8325 cyrus-sasl-2.1.15.ebuild 3737
-MD5 5cd166d8430f301e5a44ce0897cc6810 cyrus-sasl-2.1.17.ebuild 4166
+MD5 2fe0ea09149a47d8e0d3c36453a0ce43 cyrus-sasl-2.1.17.ebuild 4239
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 MD5 b398dd3696347604a52a40bf1a77291b files/2.1.14-db4.patch 2032
 MD5 a445d25ebbdf18b372340d4643736941 files/2.1.14-kerberos.patch 1148
