@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/cyrus-sasl
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.58 2004/02/27 17:53:48 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.59 2004/02/28 00:51:17 kumba Exp $
+
+  27 Feb 2004; Joshua Kinard <kumba@gentoo.org> cyrus-sasl-2.1.17.ebuild:
+  Forgot to add gnuconfig detection in for mips
 
   27 Feb 2004; Joshua Kinard <kumba@gentoo.org> cyrus-sasl-2.1.17.ebuild:
   Added ~mips to KEYWORDS to satisfy repoman deps.
